<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="9"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tv_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:padding="6dp"
                android:textStyle="bold"
                android:text="@string/today"
                android:textColor="#FFFF"
                android:textSize="16sp" />
            <TextView
                android:layout_weight="3"
                android:textColor="#FFFF"
                android:id="@+id/tv_tomorrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTitleTask"
                android:padding="6dp"
                android:textAlignment="center"
                android:text="@string/tomorow"
                android:textSize="16sp" />
            <TextView
                android:layout_weight="3"
                android:textColor="#FFFF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTitleTask"
                android:padding="6dp"
                android:textAlignment="center"
                android:id="@+id/tv_upcoming"
                android:text="@string/upcoming"
                android:textSize="16sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/listTodayTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />




        <ListView
            android:id="@+id/listTomorowTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />


        <ListView
            android:id="@+id/listUpcomingTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_add"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/ic_circle_fab"
        android:scaleType="fitXY"
        android:src="@drawable/ic_add" />
</RelativeLayout>

